--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-# Copy this file to `.env` before running the frontend locally and populate the secrets.
-# The real `.env` file is ignored by git to prevent leaking credentials.
-VITE_GOOGLE_CLIENT_ID=your-google-client-id
+VITE_API_URL=https://collaborative-task-manager-backend-80yy.onrender.com/api/v1
+VITE_GOOGLE_CLIENT_ID="936753044992-i9c9labdb7pr0n9gskmrp36rqkj1hu0r.apps.googleusercontent.com"
