--- a/package.json
+++ b/package.json
@@ -10,31 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.12.2",
-    "@tanstack/react-query": "^5.90.12",
-    "axios": "^1.13.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-hook-form": "^7.68.0",
-    "react-router-dom": "^7.10.1",
-    "socket.io-client": "^4.8.1",
-    "zod": "^4.2.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/node": "^24.10.4",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.23",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
-    "vite": "^7.3.0"
-  }
+  "@react-oauth/google": "^0.12.2",
+  "@tanstack/react-query": "^5.90.12",
+  "axios": "^1.13.2",
+  "react": "^19.2.0",
+  "react-dom": "^19.2.0",
+  "react-hook-form": "^7.68.0",
+  "react-router-dom": "^7.10.1",
+  "socket.io-client": "^4.8.1",
+  "zod": "^4.2.0",
+
+  "vite": "^7.3.0",
+  "typescript": "~5.9.3",
+  "@types/node": "^24.10.4"
+}
+
 }
